<resources>
    <string name="app_name">CheapTrip</string>

    <!--  Geral  -->
    <string name="title_activity_main">MainActivity</string>
    <string name="nav_header_desc">Cabeçalho de navegação</string>
    <string name="reais">R$</string>
    <string name="total">Total</string>
    <string name="adicionarViagem">Adicionar à viagem</string>
    <string name="valorInvalido">Valor inválido</string>
    <string name="campoObrigatorio">Campo obrigatório</string>
    <string name="viajantes">viajantes</string>
    <string name="dias">dias</string>
    <string name="porPessoa">por pessoa</string>

    <!--  Login/Registrar  -->
    <string name="logarTxt">Logar</string>
    <string name="usuarioHint">Usuario</string>
    <string name="senhaHint">Senha</string>
    <string name="mensagemCadastro">Não possui conta? Cadastre-se</string>
    <string name="registrarTxt">Registrar</string>
    <string name="concluirTxt">Concluir</string>
    <string name="nomeCadastro">Nome Completo</string>
    <string name="emailCadastro">E-Mail</string>
    <string name="senhaRepeat">Repita a Senha</string>
    <string name="conectadoChkTxt">Manter-se conectado</string>

    <!--  Menu lateral  -->
    <string name="menu_viagens">Viagens</string>
    <string name="menu_config">Configurações</string>

    <!--  Tela Configurações  -->
    <string name="logoutBtn">Deslogar-se</string>
    <string name="alterarSenhaBtn">Alterar Senha</string>
    <string name="alterarFotoBtn">Alterar foto</string>
    <string name="tituloDialogSenha">Alterar Senha</string>
    <string name="cancelarDialogBtn">Cancelar</string>
    <string name="salvarAlteracaoSenhaBtn">Alterar</string>
    <string name="toastSenhaEmpty">Campo senha necessário!!</string>
    <string name="toastSenhasDiferentes">Os campos de senha não coincidem!</string>
    <string name="toastSenhaAlterada">Salvo com sucesso!</string>
    <string name="erroImagem">Ocorreu um erro ao processar a imagem!</string>
    <string name="imagemCancelada">A seleção de imagem foi cancelada!</string>
    <string name="selecionar">Selecione o diretório da imagem:</string>

    <!--  Etapa inicial do cadastro de novas viagens  -->
    <string name="inicioNovaViagemTxt">Antes de planejar sua viagem, defina algumas informações gerais:</string>
    <string name="tituloViagem">Título</string>
    <string name="numeroViajantes">Total de viajantes</string>
    <string name="duracaoViagem">Duração da viagem (em dias)</string>
    <string name="tituloNovaViagem">Nova viagem</string>
    <string name="tituloEditarViagem">Editar viagem</string>
    <string name="cadastradaSucesso">Viagem cadastrada com sucesso!</string>
    <string name="editadaSucesso">Viagem editada com sucesso!</string>
    <string name="erroBancoDeDados">Ocorreu um problema no banco de dados.</string>
    <string name="viagemZerada">Valor total da viagem é zero.</string>

    <!--  Etapa de gasolina do cadastro de novas viagens  -->
    <string name="gasolinaNovaViagemTxt">Perfeito! Vamos aos gastos de gasolina:</string>
    <string name="totalKmsTxt">Total estimado de quilômetros</string>
    <string name="mediaKmsLitroTxt">Média de quilômetros por litro</string>
    <string name="custoMedioLitroTxt">Custo médio por litro</string>
    <string name="totalVeiculosTxt">Total de veículos</string>


    <!--  Etapa de tarifa aérea do cadastro de novas viagens  -->
    <string name="tarifaAereaNovaViagemTxt">Em relação aos gastos com tarifa aérea:</string>
    <string name="custoEstimadoPorPessoaTxt">Custo estimado por pessoa</string>
    <string name="aluguelVeiculoTxt">Aluguel de veículo</string>

    <!--  Etapa de refeições do cadastro de novas viagens  -->
    <string name="refeicoesNovaViagemTxt">Quanto pretende gastar com as refeições?</string>
    <string name="custoEstimadoRefeicaoTxt">Custo estimado por refeição</string>
    <string name="refeicoesPorDiaTxt">Refeições por dia</string>

    <!--  Etapa de hospedagem do cadastro de novas viagens  -->
    <string name="hospedagemNovaViagemTxt">Estamos quase lá! Informe os custos com hospedagem:</string>
    <string name="custoMedioNoiteTxt">Custo médio (por noite)</string>
    <string name="totalNoitesTxt">Total de noites</string>
    <string name="totalQuartosTxt">Total de quartos</string>

    <!--  Etapa de entretenimento do cadastro de novas viagens  -->
    <string name="entretenimentoNovaViagemTxt">Por fim, adicione algumas atrações:</string>
    <string name="entretenimento1Txt">Nome da atração 1</string>
    <string name="entretenimento2Txt">Nome da atração 2</string>
    <string name="entretenimento3Txt">Nome da atração 3</string>
    <string name="valorEntretenimento1Txt">Valor da atração 1</string>
    <string name="valorEntretenimento2Txt">Valor da atração 2</string>
    <string name="valorEntretenimento3Txt">Valor da atração 3</string>

    <!--    Etapa resumo de viagem já cadastrada-->
    <string name="tituloResumoViagem">Resumo viagem</string>
    <string name="tituloGasolina">Gasolina</string>
    <string name="tituloEntreterimento">Entretenimento</string>
    <string name="tituloAlimentacao">Alimentação</string>
    <string name="tituloHospedagem">Hospedagem</string>
    <string name="tituloTarifaAerea">Tarifas aéreas</string>
    <string name="gasolinaAviso">Gastos com gasolina não cadastrados!</string>
    <string name="tarifaAereaAviso">Gastos com tarifas aéreas não cadastrados!</string>
    <string name="refeicoesAviso">Gastos com alimentação não cadastrados!</string>
    <string name="hospedagemAviso">Gastos com hospedagem não cadastrados!</string>
    <string name="entreterimentoAviso">Gastos com entretenimento não cadastrados!</string>
    <string name="viagemExcluida">Viagem excluída com sucesso!</string>
</resources>