<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tarifaAereaNovaViagemTxt"
            android:gravity="center_horizontal"
            android:textSize="18sp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="50dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/custoEstimadoPorPessoaTxt"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/reais"
                    android:layout_gravity="center"/>

                <EditText
                    android:id="@+id/edit_text_custo_estimado_tarifa_aerea"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:textSize="18sp"
                    android:inputType="numberDecimal"
                    android:layout_gravity="center"
                    android:maxLength="5"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aluguelVeiculoTxt"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/reais"
                    android:layout_gravity="center"/>

                <EditText
                    android:id="@+id/edit_text_custo_aluguel_veiculo"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:textSize="18sp"
                    android:inputType="numberDecimal"
                    android:layout_gravity="center"
                    android:maxLength="5"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/total"
                android:textSize="18sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    android:text="@string/reais"
                    android:layout_gravity="center"/>

                <EditText
                    android:id="@+id/edit_text_total_tarifa_aerea"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.0"
                    android:textSize="18sp"
                    android:inputType="numberDecimal"
                    android:layout_gravity="center"
                    android:enabled="false"/>

            </LinearLayout>

        </LinearLayout>

        <CheckBox
            android:id="@+id/check_tarifa_aerea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/adicionarViagem"
            android:layout_marginHorizontal="20dp"
            android:checked="true"/>

    </LinearLayout>

</LinearLayout>